assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Changa:wght@300&family=Poppins:wght@200&display=swap');

* {
   margin: 0;
   padding: 0;
   border: none;
   box-sizing: border-box;
}

body p {
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
   color: #454545;
}

/* headings and logo */
h1, h2 {
   font-family: 'Changa', sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
   color: #454545;
}

h3 {
   font-family: 'Changa', sans-serif;
   letter-spacing: 1px;
   color: #fafafa;
}

/* logo and home page navigation top left */
.logo-home {
   height: 110px;
}

#top-container {
   height: 320px;
   width: 100%;
   background-color: #eee6c9;
   background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255, 1) 90%);
   margin: 0;
   position: relative;
}

#logo-home-join {
   height: 140px;
   width: 800px;
   margin: 0;
}

#logo-home-join {
   display: flex;
}

#logo-home-join a:link {
   text-decoration: none;
}

#logo-home-join .logo-home:hover {
   filter: drop-shadow(0 0 5px rgb(188, 157, 48, 0.9));
}

#logo-home-join a:hover h1 {
   filter: drop-shadow(0 0 5px rgb(188, 157, 48, 0.9));
}

#logo-image {
   margin-top: 15px;
   margin-left: 10px;
   height: 120px;
   width: 120px;
}

#logo-words {
   height: 70px;
   width: 650px;
   margin-top: 35px;
   margin-bottom: 30px;
   position: absolute;
   top: 0;
   left: 100px;
}

#logo-words h1 {
   font-size: 2.5rem;
   margin-bottom: 10px;
}

#quick-contact {
   float: right;
   height: 140px;
   font-size: 90%;
   position: absolute;
   top: 15px;
   right: 15px;
   color: #454545;
}

.line-container {
   opacity: 0;
}

.line {
   opacity: 0;
}

.menu-box {
  width: 900px;
  margin-left: 200px;
  margin-top: -40px;
  position: relative;
  height: 50px;
  padding-top: 10px;
}

.menu-box li {
   list-style-type: none;
   margin: 30px 25px;
   direction: rtl;
   display: inline;
   bottom: 0;
}
.menu-box a {
   text-decoration: none;
   font-family: 'Changa', sans-serif;
   letter-spacing: 2px;
   font-size: 150%;
   color: inherit;
}

.menu-box a:hover {
   border-bottom: 1px solid #3a3a3a;
   filter: drop-shadow(0 0 5px rgb(188, 157, 48, 0.9));
}

.active {
   border-bottom: 1px solid #3a3a3a;
   filter: drop-shadow(0 0 5px rgb(188, 157, 48, 0.9));
}

 /* hero image and supporting text */
 #hero-outer {
   height: 900px;
   width: 80vw;
   margin-right: 10vw;
   margin-left: 10vw;
   overflow: hidden;
   position: relative;
   margin-top: -190px;
   background: url('../images/gold-smear-diagonal.png') no-repeat center center;
   background-size: contain;
   object-position: center;
   object-fit: fill;
   object-position: center;
 }

 #cover-text, #cover-text h2 {
    color: #fff;
 }

 #hero-image {
    width: 50vw;
    height: 600px;
    margin-top: 50px;
    margin-left: 15vw;
    background: url('../images/gold-card-logo.png') no-repeat center center;
    background-size: contain;
    object-position: center;
    object-fit: fill;
    position: relative;
    /* animates the zoom effect on the loading page */
    animation-name: hero-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}
 /* creates the level of zoom for hero image */
 @keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.15);
    }
 }

 #cover-text {
    font-size: 100%;
    font-family: 'Changa', sans-serif;
    text-transform: uppercase;
    letter-spacing: 3px;
    width: 300px;
    height: 200px;
    padding-top: 10px;
    padding-left: 10px;
    background-color: rgba(241, 109, 107, .7);
    border-radius: 1px;
    top: 30px;
    right: 0;
    position: absolute;
 }

/* why train with us? */
#page-base {
   height: 600px;
   position: relative;
   background-image: linear-gradient(to top, rgba(188, 157, 48, 1), rgba(188, 157, 48, 0) 60%);
 }

 #blur-box {
   background-image: linear-gradient(to top, rgba(255,255,255,0), rgba(255, 255, 255, 1) 100%);
   height: 130px;
   width: 100%;
   position: absolute;
   top: -60px;
   z-index: 2;
}

#welcome {
   text-align: center;
   margin: -60px 50px 20px 0;
   font-size: 280%;
   letter-spacing: 1px;
   line-height: 170%;
   z-index: 1;
}

.circuit-background-home {
      height: 650px;
      bottom: 0;
      width: 100%;
      overflow: hidden;
      background: url(../images/circuitry.png) no-repeat center center;
      filter: sepia(1); 
      opacity: 60%;
      position: absolute;
 }

 #left-about {
    padding-top: 30px;
    width: 33%;
    float: left;
 }

 #right-about {
    padding-top: 30px;
    width: 33%;
    float: right;
 }

 #center-about {
    width: 33%;
    margin: 0 auto;
 }

 hr {
   border-top: 1px solid #3a3a3a;
   width: 100%;
   margin: 5px 0;
 }

 .left-about-heading {
   width: 60%;
   float: right;
   line-height: 20px;
   clear: both;
   margin-bottom: 50px;
   font-size: 110%;
 }

 .right-about-heading {
   width: 60%;
   float: left;
   line-height: 20px;
   clear: both;
   margin-bottom: 50px;
   font-size: 110%;
 }

 .left-about-heading h2 {
   text-align: left;
   font-size: 110%;
 }

 .left-about-heading p {
   text-align: left;
   font-size: 110%;
}

 .right-about-heading h2 {
   text-align: right;
   font-size: 110%;
 }

 .right-about-heading p {
   text-align: right;
   font-size: 110%;
}

 #circle-container {
   width: 300px;
   height: 300px;
   padding: 30px; 
   border: solid;
   border-color: #ccc;
   background-color: rgba(250, 250, 250, 0.7);
   border-width: 2px;
   border-radius: 50%;
   margin: 0 auto;
   overflow: hidden;
 }

 #circle-cover-bg {
   background: url('../images/lamp.png') no-repeat center center;
   height: 300px;
   width: 300px;
   object-fit: contain;
   background-size: contain;
   margin-top: -39px;
   margin-left: -30px;
   border-radius: 50%;
   filter: grayscale(0);
}
/* ... */

